# Cpp-GTest-GMock

./: README.md
Sample-Test1/: Sample-Test1.sln
Sample-Test1/Debug/: Sample-Test1.ilk
Sample-Test1/Sample-Test1/: Sample-Test1.vcxproj  test.cpp
Sample-Test1/Sample-Test1/Debug/: CodeAnalysisResultManifest.txt  Sample-Test1.exe.recipe  Sample-Test1.vcxproj.FileListAbsolute.txt  pch.nativecodeanalysis.sarif  pch.nativecodeanalysis.xml  test.nativecodeanalysis.sarif  vc.nativecodeanalysis.all.xml
Sample-Test1/Sample-Test1/Debug/Sample-Test1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Sample-Test1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cpp_test/: CMakeLists.txt  TestFixture  mock_invoke_default_actions  mock_invoke_default_actions.cpp  mock_invoke_doall  mock_invoke_doall.cpp  mock_invoke_original  mock_invoke_original.cpp  mock_invoke_original_stubs  mock_invoke_original_stubs.cpp  mock_invoke_without_args  mock_invoke_without_args.cpp  mock_reference_parameter  mock_reference_parameter.cpp  mock_without_deriving  mock_without_deriving.cpp  setup_teardown_testcase.cpp  setuplinux.txt  test_fixture.cpp  test_mock  test_mock.cpp  triangle.cpp  triangle.h  triangle_test.cpp
